2003-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick 1.0.0-beta0 release.
	* version.sh: Updated for beta0 release.
	* *.c magick/*.h: Update header inclusion to include
	"magick/" prefix in order to ensure that there is no
	confusion with headers from another package.

2003-04-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (InitializeMagickResources):
	Added the ability to obtain the amount of physical
	memory by executing an external command.
	* configure.ac: Check for getpagesize().
	(MAGICK_PHYSICAL_MEMORY_COMMAND): Added a test for
	an external command which (quickly) returns the
	amount of physical memory installed on the machine.
	Currently only activated for FreeBSD.
	(MAGICK_PHYSICAL_MEMORY_COMMAND): Use sysctl to
	determine total physical memory for Darwin.
	* magick/delegate.c (ListDelegateInfo): If COLUMNS
	environment variable is set, then use it to obtain
	the screen width.  Some shells dynamically update
	COLUMNS, but COLUMNS may need to be explicitly
	exported in order for it to be seen by subordinate
	programs (such as gm).
	* magick/effect.c (AddNoiseImage): Use IsGrayImage()
	to check if the image is gray.  Add missing columns
	loop for intensity case (oops!).
	* magick/command.c (DisplayImageCommand): Fix
	-dispose option processing bug reported by 
	Felix Heimbrecht.
	* coders/fpx.c: Check status from FPX_InitSystem().

2003-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Define PERLMAINCC to be the C compiler
	if there are no C++ dependencies, or the C++ compiler
	if there are C++ dependencies.
	* PerlMagick/Makefile.PL.in: Use PERLMAINCC to compile
	and link perlmain.c.  This allows using the C++ compiler
	to link, which is useful when the build depends on C++
	libraries like libfpx.
	* ltmain.sh: Updated to libtool 1.5 release.
	* Makefile.am ($(PERLMAGICK)/$(PERLSTATICNAME)): Add
	rules to make sure that static PerlMagick is linked