@@ -12863,7 +12863,7 @@ MagickExport void ConvertUsage(void)
       "-noise radius        add or reduce noise in an image",
       "-normalize           transform image to span the full range of colors",
       "-opaque color        change this color to the fill color",
-      "-ordered-dither channeltype LOWxHIGH",
+      "-ordered-dither channeltype NxN",
       "                     ordered dither the image",
       "-page geometry       size and location of an image canvas",
       "-paint radius        simulate an oil painting",
@@ -13035,7 +13035,7 @@ MagickExport void MogrifyUsage(void)
       "-noise radius        add or reduce noise in an image.",
       "-normalize           transform image to span the full range of colors",
       "-opaque color        change this color to the fill color",
-      "-ordered-dither channeltype LOWxHIGH",
+      "-ordered-dither channeltype NxN",
       "                     ordered dither the image",
       "-page geometry       size and location of an image canvas",
       "-paint radius        simulate an oil painting",
