@@ -1,3 +1,8 @@
+2003-04-16  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+
+	* magick/effect.c: 4x4 ordered dither threshold was
+	incorrect.
+
 2003-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* GraphicsMagick 1.0.0-beta0 release.
